--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,23 +1,144 @@
 @import url("base.css");
+
 header {
   display: flex;
   width: 100vw;
-  height: 5vh;
-  border-bottom: 1px solid var(--black);
-  .brand{
-  margin-right:  auto;
-  }
-  & .secondary-nav{
+  height: 10vh;
+  border-bottom: 1.2px solid var(--neutral-2);
+
+  .brand {
     display: flex;
     flex-direction: row;
-    margin-right:  auto;
+    margin-right: auto;
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 10svw;
+    padding: var(--space-sm);
+
+    .logo {
+      width: 40px;
+    }
+
+    p {
+      margin-top: auto;
+      margin-bottom: auto;
+      font-size: var(--font-lg);
+      padding: var(--space-xs);
+    }
+  }
+
+  & .secondary-nav {
+    display: flex;
+    flex-direction: row;
+    margin-right: auto;
+    margin-top: auto;
+    margin-bottom: auto;
     gap: 10px;
-    li{
+
+    .active {
+      border-bottom: 2px solid var(--green-3);
+    }
+
+    li {
       list-style: none;
-      a{
-        text-decoration: underline;
+
+      a {
         color: var(--black);
+        text-decoration: none;
       }
+    }
+
+    li a:hover {
+      color: var(--green-2);
+    }
+  }
+}
+
+.main-container {
+  display: flex;
+  flex-direction: row;
+
+  nav {
+    display: flex;
+    flex-direction: column;
+    width: 15svw;
+    border-right: 1.2px solid var(--neutral-2);
+
+    .topics-group {
+      padding-left: var(--space-xlg);
+      padding-top: var(--space-md);
+
+      .topic-heading {
+        padding: var(--space-xs);
+        font-weight: bolder;
+        color: var(--neutral-5);
+      }
+
+      ul li {
+        color: var(--neutral-4);
+        list-style: none;
+        font-size: var(--font-neutral);
+        padding: var(--space-sm);
+      }
+
+      li:hover {
+        color: var(--white);
+        background: var(--green-4);
+      }
+    }
+  }
+
+  main {
+    display: flex;
+    width: 70svw;
+    min-height: 100svh;
+  }
+
+  aside {
+    display: flex;
+    flex-direction: column;
+    width: 15svw;
+    min-height: 100svh;
+    border-left: 1.2px solid var(--neutral-2);
+
+    .topic-nav {
+      padding-left: var(--space-md);
+      padding-top: var(--space-lg);
+    }
+
+    .heading {
+      padding: var(--space-xs);
+      font-weight: bolder;
+      color: var(--neutral-5);
+    }
+
+    ul li {
+      list-style: none;
+      font-size: var(--font-neutral);
+      padding: var(--space-sm);
+    }
+
+    li:hover {
+      color: var(--white);
+      background: var(--green-4);
+    }
+
+    .parent {
+      font-size: var(--font-md);
+      letter-spacing: 0.2px;
+      color: var(--neutral-5);
+    }
+
+    .parent::before {
+      content: "#";
+      font-size: var(--font-md);
+      margin: auto;
+    }
+
+    .child {
+      margin-left: var(--space-md);
+      border-left: 2px solid var(--neutral-3);
+      color: var(--neutral-4);
     }
   }
 }
