--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -30,7 +30,7 @@
   --green-2: hsl(90, 60%, 60%);
   --green-3: hsl(90, 71%, 50%);
   --green-4: hsl(90, 80%, 45%);
-  --green-5: hsl(90, 90%, 30%);
+  --green-5: hsl(90, 90%, 20%);
 }
 
 *,
@@ -39,4 +39,8 @@ body {
   font-family: noto;
   margin: 0;
   padding: 0;
+}
+
+a {
+  color: var(--green-5);
 }
