--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -25,7 +25,7 @@
   --font-md: 16px;
   --font-lg: 24px;
   --font-xlg: 32px;
-  --font-xxlg:48px;
+  --font-xxlg: 48px;
 
   --space-xs: 0.25rem;
   --space-sm: 0.4rem;
@@ -46,12 +46,54 @@
   --green-5: hsl(90, 90%, 20%);
 }
 
+@media (prefers-color-scheme: dark) {
+  :root {
+    --black: #000;
+    --white: #fff;
+    --bg: #121212;
+    --bg2: #171717;
+  }
+
+  a {
+    color: var(--green-4);
+  }
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    color: var(--neutral-1) !important;
+  }
+
+  p {
+    color: var(--neutral-2) !important;
+  }
+}
+
 *,
 :root,
 body {
   font-family: noto-sans;
   margin: 0;
   padding: 0;
+}
+
+.light {
+  color-scheme: light;
+}
+
+.dark {
+  color-scheme: dark;
+}
+
+h1 {
+  color: var(--neutral-5);
+}
+
+p {
+  color: var(--neutral-4);
 }
 
 a {
